<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <apidez.com.doit.view.custom.DueDateView
            android:id="@+id/today"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:daySubtitle="@string/today"
            app:dayTitle="02"
            app:select="true"/>

        <apidez.com.doit.view.custom.DueDateView
            android:id="@+id/tomorrow"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:daySubtitle="@string/tomorrow"
            app:dayTitle="03"/>

        <apidez.com.doit.view.custom.DueDateView
            android:id="@+id/date_picker"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:daySubtitle="@string/a_day"
            app:dayTitle="@string/pick"/>

        <apidez.com.doit.view.custom.DueDateView
            android:id="@+id/no_due_date"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:daySubtitle="@string/no_due_date"
            app:dayTitle="@string/no"/>
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="@dimen/dute_date_item_height"
        android:layout_alignParentLeft="true"
        android:background="@color/due_date_border"
        android:visibility="visible"/>
</RelativeLayout>
