<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:paddingLeft="@dimen/large_space"
    android:paddingRight="@dimen/large_space"
    android:paddingTop="@dimen/large_space">

    <!-- Use to disable auto focus text view -->
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutCreditCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_space">

        <EditText
            android:id="@+id/creditCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            android:textSize="@dimen/title_size"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_space"
        android:text="@string/due_date"
        android:textColor="@color/hint_color"
        android:textSize="@dimen/small_sub_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_space"
        android:text="@string/priority"
        android:textColor="@color/hint_color"
        android:textSize="@dimen/small_sub_size"/>

    <apidez.com.doit.view.custom.PriorityPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/extra_space"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/large_space"
            android:text="@string/discard"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/subtitle_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/large_space"
            android:text="@string/save"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/subtitle_size"/>
    </LinearLayout>
</LinearLayout>