<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <apidez.com.doit.view.custom.PriorityView
        android:id="@+id/priority_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/extra_space"
        app:priorityColor="@color/bg_priority_high"
        app:priorityTitleColor="@android:color/white"
        app:priorityTitle="@string/high_priority"/>

    <apidez.com.doit.view.custom.PriorityView
        android:id="@+id/priority_med"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/extra_space"
        app:priorityColor="@color/bg_priority_medium"
        app:priorityTitleColor="@android:color/black"
        app:priorityTitle="@string/medium_priority"/>

    <apidez.com.doit.view.custom.PriorityView
        android:id="@+id/priority_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:priorityColor="@color/bg_priority_low"
        app:priorityTitleColor="@android:color/black"
        app:priorityTitle="@string/low_priority"/>
</LinearLayout>